--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -13,6 +13,7 @@
   --sbb-teaser-align-items: center;
   --sbb-teaser-gap: var(--sbb-spacing-fixed-4x);
   --sbb-teaser-width: fit-content;
+  --sbb-teaser-border-radius: var(--sbb-border-radius-4x);
 }
 
 :host([is-stacked]) {
@@ -30,6 +31,8 @@
 
   &:focus-visible {
     @include sbb.focus-outline;
+
+    border-radius: calc(var(--sbb-teaser-border-radius));
   }
 }
 
@@ -57,7 +60,7 @@
 .sbb-teaser__image-wrapper {
   min-width: var(--sbb-teaser-width);
   overflow: hidden;
-  border-radius: var(--sbb-border-radius-4x);
+  border-radius: var(--sbb-teaser-border-radius);
   transition: var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
 
   @include sbb.hover-mq($hover: true) {
