--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -8,6 +8,7 @@
   --sbb-toggle-option-cursor: pointer;
   --sbb-toggle-option-color: var(--sbb-color-anthracite-default);
   --sbb-toggle-option-icon-min-size: var(--sbb-size-icon-ui-small);
+  --sbb-toggle-option-border-radius: var(--sbb-border-radius-16x);
   --sbb-toggle-option-line-height: calc(1em * var(--sbb-typo-line-height-body-text));
 
   display: inline-block;
@@ -39,10 +40,10 @@ input[type='radio'] {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: var(--sbb-toggle-height);
   min-width: var(--sbb-toggle-min-width);
   padding-inline: var(--sbb-toggle-padding-inline);
-  padding-block: var(--sbb-toggle-padding-block);
-  border-radius: var(--sbb-border-radius-16x);
+  border-radius: var(--sbb-toggle-option-border-radius);
   color: var(--sbb-toggle-option-color);
 
   &:not(.sbb-toggle-option--icon-only) {
@@ -50,16 +51,19 @@ input[type='radio'] {
   }
 }
 
-.sbb-toggle-option--has-icon {
-  // Recalculate padding to maintain the same toggle height when the icon is displayed.
-  padding-block: calc(
-    var(--sbb-toggle-padding-block) -
-      ((var(--sbb-toggle-option-icon-min-size) - var(--sbb-toggle-option-line-height)) / 2)
-  );
-}
-
 .sbb-toggle-option__label {
   @include sbb.ellipsis;
+
+  :host(:focus-visible) & {
+    ::before {
+      content: '';
+      position: absolute;
+      pointer-events: none;
+      inset: calc(var(--sbb-focus-outline-offset) * -2);
+      border: var(--sbb-focus-outline-color) solid var(--sbb-focus-outline-width);
+      border-radius: var(--sbb-toggle-option-border-radius);
+    }
+  }
 }
 
 sbb-icon,
