--- a/src/components/sbb-footer/sbb-footer.scss
+++ b/src/components/sbb-footer/sbb-footer.scss
@@ -12,6 +12,8 @@
   --sbb-footer-gap-vertical: var(--sbb-spacing-responsive-l);
   --sbb-footer-background-color: var(--sbb-color-milk-default);
   --sbb-footer-clock-width: #{sbb.px-to-rem-build(76)};
+  --sbb-footer-padding-inline: var(--sbb-layout-base-offset-responsive);
+  --sbb-footer-content-max-width: var(--sbb-layout-base-page-max-width);
 
   @include sbb.mq($from: small) {
     --sbb-footer-clock-width: #{sbb.px-to-rem-build(112)};
@@ -22,9 +24,14 @@
   --sbb-footer-background-color: var(--sbb-color-charcoal-default);
 }
 
+:host([wide]) {
+  --sbb-footer-padding-inline: var(--sbb-spacing-responsive-xs);
+  --sbb-footer-content-max-width: auto;
+}
+
 .sbb-footer {
   padding-block: var(--sbb-spacing-responsive-l);
-  padding-inline: var(--sbb-layout-base-offset-responsive);
+  padding-inline: var(--sbb-footer-padding-inline);
   background-color: var(--sbb-footer-background-color);
 }
 
@@ -52,7 +59,7 @@
     }
 
     @include sbb.mq($from: wide) {
-      max-width: var(--sbb-layout-base-page-max-width);
+      max-width: var(--sbb-footer-content-max-width);
       margin-inline-start: auto;
       margin-inline-end: auto;
       grid-template-columns: repeat(4, 1fr);
