--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -52,6 +52,9 @@ html {
   @include typo.legend;
 }
 
+// In smaller title font-sizes, the space after the title is smaller than the default paragraph space before.
+// Due to margin collapsing, the paragraph space wrongly wins.
+// To prevent the too large gap, we reset the paragraph space.
 .sbb-title + p {
   margin-block-start: 0;
 }
