--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -55,6 +55,6 @@ html {
 // In smaller title font-sizes, the space after the title is smaller than the default paragraph space before.
 // Due to margin collapsing, the paragraph space wrongly wins.
 // To prevent the too large gap, we reset the paragraph space.
-.sbb-title + p {
+sbb-title + p {
   margin-block-start: 0;
 }
