feat: handle disableAnimation property

--- a/src/components/sbb-toggle/sbb-toggle.scss
+++ b/src/components/sbb-toggle/sbb-toggle.scss
@@ -44,7 +44,8 @@
   }
 }
 
-:host([disable-animation]) {
+:host([disable-animation]),
+:host([data-disable-animation-on-resizing]) {
   --sbb-toggle-animation-duration: 0s;
 }
 
