--- a/src/components/sbb-toggle/sbb-toggle.scss
+++ b/src/components/sbb-toggle/sbb-toggle.scss
@@ -35,6 +35,11 @@
   --sbb-toggle-selected-option-border-color: var(--sbb-color-graphite-default);
 }
 
+:host([disabled='false']) {
+  --sbb-toggle-selected-option-background-color: var(--sbb-color-white-default);
+  --sbb-toggle-selected-option-border-color: var(--sbb-color-smoke-default);
+}
+
 :host([size='m']) {
   --sbb-toggle-padding-inline: var(--sbb-spacing-responsive-s);
   --sbb-toggle-height: #{sbb.px-to-rem-build(44)};
