--- a/src/components/sbb-toggle/sbb-toggle.scss
+++ b/src/components/sbb-toggle/sbb-toggle.scss
@@ -30,14 +30,10 @@
   }
 }
 
-:host([disabled]) {
+// stylelint-disable-next-line plugin/stylelint-bem-namics
+:host([disabled]:not([disabled='false'])) {
   --sbb-toggle-selected-option-background-color: var(--sbb-color-milk-default);
   --sbb-toggle-selected-option-border-color: var(--sbb-color-graphite-default);
-}
-
-:host([disabled='false']) {
-  --sbb-toggle-selected-option-background-color: var(--sbb-color-white-default);
-  --sbb-toggle-selected-option-border-color: var(--sbb-color-smoke-default);
 }
 
 :host([size='m']) {
