fix: consider boolean properties which have a defined value

--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -43,7 +43,7 @@
   }
 }
 
-:host([variant='primary'][negative]) {
+:host([variant='primary'][negative]:not([negative='false'])) {
   --sbb-button-color-active-background: var(--sbb-color-cloud-default);
   --sbb-button-color-active-border: var(--sbb-color-cloud-default);
   --sbb-button-color-active-text: var(--sbb-color-red150-default);
@@ -77,7 +77,7 @@
   --sbb-button-shadow-2-color: var(--sbb-color-cement-alpha-20);
 }
 
-:host([variant='secondary'][negative]) {
+:host([variant='secondary'][negative]:not([negative='false'])) {
   --sbb-button-color-active-background: transparent;
   --sbb-button-color-active-border: var(--sbb-color-cloud-default);
   --sbb-button-color-active-text: var(--sbb-color-cloud-default);
@@ -107,7 +107,7 @@
   --sbb-button-color-hover-text: var(--sbb-color-milk-default);
 }
 
-:host([variant='translucent'][negative]) {
+:host([variant='translucent'][negative]:not([negative='false'])) {
   --sbb-button-color-active-background: var(--sbb-color-white-alpha-70);
   --sbb-button-color-active-border: var(--sbb-color-white-alpha-0);
   --sbb-button-color-active-text: var(--sbb-color-anthracite-default);
@@ -137,7 +137,7 @@
   --sbb-button-color-hover-text: var(--sbb-color-black-default);
 }
 
-:host([variant='transparent'][negative]) {
+:host([variant='transparent'][negative]:not([negative='false'])) {
   --sbb-button-color-active-background: var(--sbb-color-iron-default);
   --sbb-button-color-active-border: var(--sbb-color-iron-default);
   --sbb-button-color-active-text: var(--sbb-color-white-default);
@@ -212,8 +212,7 @@
 
   // If the the device can hover over elements with ease
   @include sbb.hover-mq($hover: true) {
-    // stylelint-disable plugin/stylelint-bem-namics
-    :host(:not([disabled])) &:hover:not(:active) {
+    :host(:not([disabled]:not([disabled='false']))) &:hover:not(:active) {
       --sbb-button-translate-y-content-hover: #{sbb.px-to-rem-build(-1)};
       --sbb-button-shadow-1-offset-y: calc(
         0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
@@ -233,10 +232,9 @@
         }
       }
     }
-    // stylelint-enable plugin/stylelint-bem-namics
   }
 
-  :host([disabled]) & {
+  :host([disabled]:not([disabled='false'])) & {
     color: var(--sbb-button-color-disabled-text);
     cursor: default;
     pointer-events: none;
@@ -265,18 +263,21 @@
     }
   }
 
-  // stylelint-disable plugin/stylelint-bem-namics
-  :host(:not([disabled])) &:active::before {
+  :host(:not([disabled]:not([disabled='false']))) &:active::before {
     color: var(--sbb-button-color-active-text);
     background-color: var(--sbb-button-color-active-background);
     border-color: var(--sbb-button-color-active-border);
   }
-  // stylelint-enable plugin/stylelint-bem-namics
 
   // Only apply shadow definitions where it is really used.
-  // stylelint-disable plugin/stylelint-bem-namics
-  :host([variant='primary']:not([disabled])) &,
-  :host([variant='secondary']:not([negative], [disabled])) & {
+  :host([variant='primary']:not([disabled]:not([disabled='false']))) &,
+  :host(
+      [variant='secondary']:not(
+          [negative]:not([negative='false']),
+          [disabled]:not([disabled='false'])
+        )
+    )
+    & {
     &:not(:active)::before {
       box-shadow: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
           var(--sbb-button-shadow-2-offset-y) var(--sbb-button-shadow-2-blur)
@@ -286,14 +287,13 @@
           var(--sbb-button-shadow-1-color);
     }
   }
-  // stylelint-enable plugin/stylelint-bem-namics
 
   @include sbb.if-forced-colors {
     color: ButtonText;
   }
 }
 
-:host([static]) {
+:host([static]:not([static='false'])) {
   user-select: none;
 }
 
@@ -304,7 +304,7 @@
   width: var(--sbb-button-min-height);
   justify-content: center;
 
-  :host([disabled]) &::after {
+  :host([disabled]:not([disabled='false'])) &::after {
     inset-inline: unset;
 
     // Width of line through is fixed in icon variant
