--- a/src/components/sbb-divider/sbb-divider.scss
+++ b/src/components/sbb-divider/sbb-divider.scss
@@ -13,7 +13,7 @@
   height: 100%;
 }
 
-:host([negative]) {
+:host([negative]:not([negative='false'])) {
   --sbb-divider-color: var(--sbb-color-iron-default);
 }
 
