--- a/src/components/sbb-logo/sbb-logo.scss
+++ b/src/components/sbb-logo/sbb-logo.scss
@@ -22,7 +22,7 @@
   }
 }
 
-:host([negative]) {
+:host([negative]:not([negative='false'])) {
   --sbb-logo-word-mark-color: var(--sbb-color-white-default);
 }
 
