--- a/src/components/sbb-tab-group/sbb-tab-group.scss
+++ b/src/components/sbb-tab-group/sbb-tab-group.scss
@@ -20,7 +20,7 @@
     height: 0;
   }
 
-  ::slotted(*[active]) {
+  ::slotted(*[active]:not([active='false'])) {
     visibility: visible;
     opacity: 1;
     height: fit-content;
@@ -33,12 +33,10 @@
   }
 }
 
-// stylelint-disable plugin/stylelint-bem-namics
 // Make inactive nested tab groups non-focusable, to ensure accessibility
-:host(.tab-group--nested:not([active])) *,
-:host(.tab-group--nested:not([active])) ::slotted(*) {
+:host(.tab-group--nested:not([active]:not([active='false']))) *,
+:host(.tab-group--nested:not([active]:not([active='false']))) ::slotted(*) {
   visibility: hidden;
   opacity: 0;
   height: 0;
 }
-// stylelint-enable plugin/stylelint-bem-namics
