--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -16,7 +16,7 @@
   --sbb-teaser-border-radius: var(--sbb-border-radius-4x);
 }
 
-:host([is-stacked]) {
+:host([is-stacked]:not([is-stacked='false'])) {
   --sbb-teaser-flex-direction: column;
   --sbb-teaser-align-items: baseline;
   --sbb-teaser-gap: var(--sbb-spacing-fixed-3x);
