--- a/src/components/sbb-icon/sbb-icon.scss
+++ b/src/components/sbb-icon/sbb-icon.scss
@@ -27,7 +27,7 @@ svg {
       stroke: currentcolor;
     }
 
-    // stylelint-disable plugin/stylelint-bem-namics, selector-not-notation
+    // stylelint-disable selector-not-notation
     // TODO: Maybe improve this solution in CDN Image
     & >,
     :where(:not([stroke]):not([fill])) {
@@ -35,6 +35,6 @@ svg {
         fill: currentcolor;
       }
     }
-    // stylelint-enable plugin/stylelint-bem-namics, selector-not-notation
+    // stylelint-enable selector-not-notation
   }
 }
