--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -28,7 +28,7 @@
     outline: none;
   }
 
-  :host([disabled]) & {
+  :host([disabled]:not([disabled='false'])) & {
     cursor: default;
     color: var(--sbb-color-graphite-default);
   }
@@ -52,8 +52,7 @@
   }
 
   @include sbb.hover-mq($hover: true) {
-    // stylelint-disable-next-line plugin/stylelint-bem-namics
-    :host(:not([disabled])) .sbb-menu-action:hover & {
+    :host(:not([disabled]:not([disabled='false']))) .sbb-menu-action:hover & {
       background-color: var(--sbb-color-iron-default);
     }
   }
@@ -68,7 +67,7 @@
 .sbb-menu-action__label {
   @include sbb.ellipsis;
 
-  :host([disabled]) & {
+  :host([disabled]:not([disabled='false'])) & {
     text-decoration: line-through;
   }
 }
