--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -24,7 +24,7 @@
 }
 
 :host([data-group-disabled]),
-:host([disabled]) {
+:host([disabled]:not([disabled='false'])) {
   --sbb-radio-button-label-color: var(--sbb-color-smoke-default);
 }
 
@@ -47,7 +47,7 @@
   }
 
   :host([data-group-disabled]) &,
-  :host([disabled]) & {
+  :host([disabled]:not([disabled='false'])) & {
     cursor: default;
   }
 }
@@ -79,7 +79,7 @@
     }
 
     :host([data-group-disabled]) &,
-    :host([disabled]) & {
+    :host([disabled]:not([disabled='false'])) & {
       @include sbb.if-forced-colors {
         border-color: GrayText;
       }
@@ -94,7 +94,7 @@
   border-width: #{sbb.px-to-rem-build(6)};
 
   :host([data-group-disabled]) &,
-  :host([disabled]) & {
+  :host([disabled]:not([disabled='false'])) & {
     --sbb-radio-button-background-color: var(--sbb-color-graphite-default);
   }
 }
