--- a/src/components/sbb-tag/sbb-tag.scss
+++ b/src/components/sbb-tag/sbb-tag.scss
@@ -27,7 +27,7 @@
 }
 
 // Active state
-:host([checked]) {
+:host([checked]:not([checked='false'])) {
   --sbb-tag-border-color: var(--sbb-color-charcoal-default);
   --sbb-tag-border-width: var(--sbb-border-width-2x);
 
@@ -36,7 +36,7 @@
   }
 }
 
-:host([disabled]) {
+:host([disabled]:not([disabled='false'])) {
   --sbb-tag-text-color: var(--sbb-color-platinum-default);
   --sbb-tag-amount-color: var(--sbb-color-platinum-default);
   --sbb-tag-background-color: var(--sbb-color-milk-default);
@@ -49,7 +49,7 @@
   }
 }
 
-:host([checked][disabled]) {
+:host([checked]:not([checked='false'])[disabled]:not([disabled='false'])) {
   --sbb-tag-border-color: var(--sbb-color-platinum-default);
 }
 
@@ -93,7 +93,7 @@
     transition-property: inset, background-color, border-color, box-shadow;
   }
 
-  :host([disabled]) & {
+  :host([disabled]:not([disabled='false'])) & {
     cursor: unset;
     pointer-events: none;
 
@@ -105,8 +105,7 @@
     }
   }
 
-  /* stylelint-disable plugin/stylelint-bem-namics */
-  :host(:not([disabled])) &:hover:not(:active) {
+  :host(:not([disabled]:not([disabled='false']))) &:hover:not(:active) {
     // If the the device can hover over elements with ease
     @include sbb.hover-mq($hover: true) {
       --sbb-tag-background-color: var(--sbb-color-milk-default);
@@ -114,7 +113,6 @@
       --sbb-tag-transition: translateY(calc(var(--sbb-border-width-1x) * -1));
     }
   }
-  /* stylelint-enable plugin/stylelint-bem-namics */
 }
 
 .sbb-tag__icon {
