--- a/src/components/sbb-title/sbb-title.scss
+++ b/src/components/sbb-title/sbb-title.scss
@@ -16,39 +16,62 @@
   margin-block-end: var(--sbb-title-margin-block-end);
 }
 
-// stylelint-disable plugin/stylelint-bem-namics
-:host(:where(:not([visually-hidden]))) {
+:host(:where(:not([visually-hidden]:not([visually-hidden='false'])))) {
   --sbb-title-margin-block-start: var(--sbb-spacing-responsive-m);
   --sbb-title-margin-block-end: var(--sbb-spacing-responsive-s);
 }
 
 // Due to using :where, order does matter
-:host(:where([level='1']:not([visual-level]), [visual-level='1']):where(:not([visually-hidden]))) {
+:host(
+    :where([level='1']:not([visual-level]), [visual-level='1']):where(
+        :not([visually-hidden]:not([visually-hidden='false']))
+      )
+  ) {
   --sbb-title-margin-block-start: var(--sbb-spacing-responsive-l);
 }
 
 // Due to using :where, order does matter
-:host(:where([level='2']:not([visual-level]), [visual-level='2']):where(:not([visually-hidden]))),
-:host(:where([level='3']:not([visual-level]), [visual-level='3']):where(:not([visually-hidden]))) {
+:host(
+    :where([level='2']:not([visual-level]), [visual-level='2']):where(
+        :not([visually-hidden]:not([visually-hidden='false']))
+      )
+  ),
+:host(
+    :where([level='3']:not([visual-level]), [visual-level='3']):where(
+        :not([visually-hidden]:not([visually-hidden='false']))
+      )
+  ) {
   --sbb-title-margin-block-end: var(--sbb-spacing-responsive-xxxs);
 }
 
 // Due to using :where, order does matter
-:host(:where([level='4']:not([visual-level]), [visual-level='4']):where(:not([visually-hidden]))) {
+:host(
+    :where([level='4']:not([visual-level]), [visual-level='4']):where(
+        :not([visually-hidden]:not([visually-hidden='false']))
+      )
+  ) {
   --sbb-title-margin-block-end: var(--sbb-spacing-fixed-3x);
 }
 
 // Due to using :where, order does matter
-:host(:where([level='5']:not([visual-level]), [visual-level='5']):where(:not([visually-hidden]))) {
+:host(
+    :where([level='5']:not([visual-level]), [visual-level='5']):where(
+        :not([visually-hidden]:not([visually-hidden='false']))
+      )
+  ) {
   --sbb-title-margin-block-end: var(--sbb-spacing-fixed-2x);
 }
 
 // Due to using :where, order does matter
-:host(:where([level='6']:not([visual-level]), [visual-level='6']):where(:not([visually-hidden]))) {
+:host(
+    :where([level='6']:not([visual-level]), [visual-level='6']):where(
+        :not([visually-hidden]:not([visually-hidden='false']))
+      )
+  ) {
   --sbb-title-margin-block-end: var(--sbb-spacing-fixed-1x);
 }
 
-:host([negative]) {
+:host([negative]:not([negative='false'])) {
   @include sbb.title--negative;
 }
 
@@ -57,7 +80,7 @@
 
   color: var(--sbb-title-text-color-normal);
 
-  :host([visually-hidden]) & {
+  :host([visually-hidden]:not([visually-hidden='false'])) & {
     @include sbb.screen-reader-only;
   }
 
@@ -88,5 +111,4 @@
   :host(:is([level='6']:not([visual-level]), [visual-level='6'])) & {
     @include sbb.title-6($exclude-spacing: true);
   }
-  // stylelint-enable plugin/stylelint-bem-namics
 }
