--- a/src/components/sbb-toggle/sbb-toggle.scss
+++ b/src/components/sbb-toggle/sbb-toggle.scss
@@ -22,7 +22,7 @@
   }
 }
 
-:host([even]) {
+:host([even]:not([even='false'])) {
   --sbb-toggle-width: 100%;
 
   ::slotted(sbb-toggle-option) {
@@ -30,7 +30,6 @@
   }
 }
 
-// stylelint-disable-next-line plugin/stylelint-bem-namics
 :host([disabled]:not([disabled='false'])) {
   --sbb-toggle-selected-option-background-color: var(--sbb-color-milk-default);
   --sbb-toggle-selected-option-border-color: var(--sbb-color-graphite-default);
@@ -45,7 +44,7 @@
   }
 }
 
-:host([disable-animation]),
+:host([disable-animation]:not([disable-animation='false'])),
 :host([data-disable-animation-on-resizing]) {
   --sbb-toggle-animation-duration: 0s;
 }
